testCases/semanticAnalyzerTestCases/correct/expressionC.cs16
-- Chris Kaebe, March 3, 2016

int main(void){
    int x, a;--, b, p, q;

    x := -a;
    x := b;
   -- x := p < q;
   -- x := p <= q;
   -- x := p > q;
   -- x := p >= q;
   -- x := p = q;
   -- x := p /= q;

   return 0;
}